# 18TUI

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  manifest.rs  save.rs
crates/core/src/models/: mod.rs
crates/core/src/resource/: loader.rs  mod.rs  sync.rs
crates/core/src/session/: loader.rs  mod.rs  models.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  block_font.rs  main.rs
