[workspace]
members = [
  "crates/core",
  "crates/tui"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "io-util", "sync", "process"] }
reqwest = { version = "0.11", features = ["json", "blocking", "gzip"] }
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
parking_lot = "0.12"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.14"
notify = "6"
tempfile = "3"
dirs = "5"
regex = "1"
walkdir = "2"
once_cell = "1"
